# innocence-project-case-scoring

./: .gitignore  METHODOLOGY_DISCUSSION.md  README.md  pyproject.toml
data/demo/: marvel_intakes.json
data/demo/famous/: chmiel_opinion.txt  harward_opinion.txt  huffington_opinion.txt
data/processed/: app.db  calibration.json  case_store.jsonl
data/raw/exonerations/: fullcsv.csv
data/raw/innocence_project/: all_cases.json
data/raw/officials/: _TEMPLATE.json
docs/: demo-guide.md  demo-script.md  local-deployment.md  spec-review-by-civic-tech-consultant.md  spec-v3-triage-assistant.md
src/risk_engine/: __init__.py  calibration.py  casefiles.py  casework.py  cli.py  config.py  database.py  dataset.py  defense.py  forensic.py  innocence_project.py  labels.py  matching.py  models.py  officials.py  packet.py  pdf_intake.py  reference.py  retrieval.py  severity.py  store.py
src/risk_engine/acquisition/: __init__.py  base.py  bulk_courtlistener.py  courtlistener.py  demo_famous.py  demo_marvel.py  pittsburgh.py
src/risk_engine/intake/: __init__.py  record.py  schema.py  structuring.py
src/risk_engine/lexicons/: __init__.py  junk_science.json  rules.json
src/risk_engine/processing/: __init__.py  base.py  determinative.py  forensic.py  ocr.py  officials.py  pipeline.py  tabular.py  text.py
src/risk_engine/scoring/: __init__.py  base.py  baseline.py
src/risk_engine/ui/: __init__.py  __main__.py  app.py  forms.py
src/risk_engine/ui/templates/: _case_file_flag.html  _error.html  (+13 more)
tests/: test_bulk_courtlistener.py  test_calibration.py  test_case_flags.py  test_casefiles.py  test_casework.py  test_courtlistener.py  test_database.py  test_dataset.py  test_defense.py  test_demo_famous.py  test_demo_marvel.py  test_determinative.py  test_forensic.py  test_innocence_project.py  test_intake.py  test_labels.py  test_matching.py  test_officials.py  test_packet.py  test_paste_fallback.py  test_pdf_intake.py  test_pdf_routes.py  test_pipeline.py  test_recall_fixture.py  test_reference.py  test_retrieval.py  test_severity.py  test_store.py  test_structuring.py  test_tabular.py  test_ui.py  test_worklist.py
tests/data/: recall_fixture.json
