[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-engine"
version = "0.1.0"
description = "Systemic Risk Profile Flagging Engine — POC for wrongful-conviction case triage"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pennsylvania Innocence Project pilot" }]
# The core package is intentionally dependency-free (stdlib only) so the
# pipeline can be imported and unit-tested without optional, heavy extras.
dependencies = []

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
acquisition = ["requests>=2.31"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
scoring = ["scikit-learn>=1.3", "pandas>=2.0"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
risk-engine = "risk_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
